####################################################################################################################################
# Raytracing library
# (c) 2021 | Florian Eigentler
####################################################################################################################################

####################################################################################################################################
# Add subdirecotries
#-----------------------------------------------------------------------------------------------------------------------------------
add_subdirectory( step_1 )
add_subdirectory( step_2 )
add_subdirectory( step_3 )
add_subdirectory( step_4 )
add_subdirectory( step_5 )
add_subdirectory( step_6 )
add_subdirectory( step_7 )
add_subdirectory( step_8 )
add_subdirectory( step_9 )
add_subdirectory( step_final )
add_subdirectory( step_next_1 )