####################################################################################################################################
# Raytracing library
# (c) 2021 | Florian Eigentler
####################################################################################################################################
set( target "${CMAKE_PROJECT_NAME}" )

####################################################################################################################################
# Find sources
#-----------------------------------------------------------------------------------------------------------------------------------
file( GLOB SOURCES
    *.cpp
)

####################################################################################################################################
# Build target
#-----------------------------------------------------------------------------------------------------------------------------------
add_library( ${target} OBJECT ${SOURCES} )
target_include_directories( ${target} PUBLIC ../include PRIVATE src )