####################################################################################################################################
# Raytracing library
# (c) 2021 | Florian Eigentler
####################################################################################################################################
set( target "${CMAKE_PROJECT_NAME}_step_6" )

####################################################################################################################################
# Find sources
#-----------------------------------------------------------------------------------------------------------------------------------
file( GLOB SOURCES
    *.cpp
)

####################################################################################################################################
# Additional packages
#-----------------------------------------------------------------------------------------------------------------------------------
find_package( OpenMP REQUIRED )

####################################################################################################################################
# Build target
#-----------------------------------------------------------------------------------------------------------------------------------
add_executable( ${target} ${SOURCES} )
target_link_libraries( ${target} PRIVATE ${CMAKE_PROJECT_NAME} )
add_definitions( -DPROJECT="${target}" )
target_link_libraries( ${target} PRIVATE OpenMP::OpenMP_CXX )

####################################################################################################################################
# Build test target
#-----------------------------------------------------------------------------------------------------------------------------------
add_test(
    NAME ${target}
    COMMAND ${target}
    WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}/results"
)